Enable revoking exact connection
