# apps/react-frontend/src/api/services/exactOnlineService.ts
@@ -1,14 +1,12 @@
-import { ExactOnlineControllerApi } from "../client";
-import { apiInstance } from "./apiInstance";
+import { ExactOnlineControllerApi } from '../client';
+import { apiInstance } from './apiInstance';
 
 const exactOnlineApi = new ExactOnlineControllerApi(apiInstance.config);
 
 export const exactOnlineService = {
   getConnectionStatus: () => exactOnlineApi.getConnectionStatus(),
   getAuthorizationUrl: () => exactOnlineApi.getAuthorizationUrl(),
-  refreshToken: () => exactOnlineApi.refreshToken(),
+  revokeConnection: () => exactOnlineApi.revokeConnection(),
   syncFromExact: () => exactOnlineApi.syncFromExact(),
   getConflicts: () => exactOnlineApi.getConflicts(),
 };
-  
-
